force-app/main/default/objects/Association__c/fields/Association_Code__c.field-meta.xml
<CustomField>
    <fullName>Association_Code__c</fullName>
    <label>Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>