force-app/main/default/objects/Association__c/fields/Association_Name__c.field-meta.xml
<CustomField>
    <fullName>Association_Name__c</fullName>
    <label>Association Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>