force-app/main/default/objects/Association__c/fields/Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Contact_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Associations</relationshipLabel>
    <relationshipName>Associations</relationshipName>
    <type>Lookup</type>
</CustomField>