force-app/main/default/objects/Association__c/fields/Parent_Region__c.field-meta.xml
<CustomField>
    <fullName>Parent_Region__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Region</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Association__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Region</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Association__c</referenceTo>
    <relationshipLabel>Associations</relationshipLabel>
    <relationshipName>Associations</relationshipName>
    <type>Lookup</type>
</CustomField>