force-app/main/default/objects/Association__c/fields/Parent_Region_Name__c.field-meta.xml
<CustomField>
    <fullName>Parent_Region_Name__c</fullName>
    <formula>Parent_Region__r.Region_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Region Name</label>
    <type>Text</type>
</CustomField>