force-app/main/default/objects/Association__c/fields/Postcode_Group__c.field-meta.xml
<CustomField>
    <fullName>Postcode_Group__c</fullName>
    <label>Postcode Group</label>
    <length>10</length>
    <type>Text</type>
</CustomField>