force-app/main/default/objects/Association__c/fields/Postcode_Part_1__c.field-meta.xml
<CustomField>
    <fullName>Postcode_Part_1__c</fullName>
    <description>Outward section of the Postcode i.e. PR1 or L15 - does not include the trailing space. Used to determine the Region and DA allocation</description>
    <label>Postcode Part 1</label>
    <length>5</length>
    <type>Text</type>
</CustomField>