force-app/main/default/objects/Association__c/fields/Postcode_Part_2__c.field-meta.xml
<CustomField>
    <fullName>Postcode_Part_2__c</fullName>
    <description>Inward section of the Postcode i.e. 7FG - does not include the leading space. Used to determine the Region and DA allocation</description>
    <label>Postcode Part 2</label>
    <length>5</length>
    <type>Text</type>
</CustomField>