force-app/main/default/objects/Association__c/recordTypes/Council.recordType-meta.xml
<RecordType>
    <fullName>Council</fullName>
    <active>true</active>
    <description>Offices associated with Councils &amp; Committees (inc. National, Exec, Mgmt and Sections)</description>
    <label>Council</label>
</RecordType>