force-app/main/default/objects/Association__c/recordTypes/District_Association.recordType-meta.xml
<RecordType>
    <fullName>District_Association</fullName>
    <active>true</active>
    <description>Offices associated with the District Associations</description>
    <label>District Association</label>
</RecordType>