force-app/main/default/objects/Association__c/recordTypes/Region.recordType-meta.xml
<RecordType>
    <fullName>Region</fullName>
    <active>true</active>
    <description>Offices associated with the Regions</description>
    <label>Region</label>
</RecordType>