force-app/main/default/objects/Association__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>isActive__c</columns>
    <columns>Parent_Region__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>