force-app/main/default/objects/Association__c/listViews/Associations_not_active.listView-meta.xml
<ListView>
    <fullName>Associations_not_active</fullName>
    <columns>NAME</columns>
    <columns>Association_Name__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>isActive__c</columns>
    <columns>Parent_Region__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>isActive__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Associations not active</label>
</ListView>