force-app/main/default/objects/Association__c/listViews/Councils.listView-meta.xml
<ListView>
    <fullName>Councils</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>isActive__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Association__c.Council</value>
    </filters>
    <label>Councils</label>
</ListView>