force-app/main/default/objects/Association__c/listViews/District_Associations.listView-meta.xml
<ListView>
    <fullName>District_Associations</fullName>
    <columns>NAME</columns>
    <columns>Association_Code__c</columns>
    <columns>Parent_Region_Name__c</columns>
    <columns>Parent_Region_Code__c</columns>
    <columns>isActive__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Association__c.District_Association</value>
    </filters>
    <filters>
        <field>NAME</field>
        <operation>notContain</operation>
        <value>Group</value>
    </filters>
    <label>District Associations</label>
</ListView>