force-app/main/default/objects/Association__c/listViews/Regions.listView-meta.xml
<ListView>
    <fullName>Regions</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Region_Code__c</columns>
    <columns>isActive__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Association__c.Region</value>
    </filters>
    <label>Regions</label>
</ListView>